# reconnaissance-faciale-v0

./: README.md
biometric-system/: .dockerignore  .env  .env.example  DEPLOY.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
biometric-system/.github/workflows/: ci.yml  load-test.yml  release.yml
biometric-system/apps/dashboard/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
biometric-system/apps/dashboard/src/: App.tsx  main.tsx
biometric-system/apps/mobile/: README.md  pubspec.yaml
biometric-system/apps/mobile/lib/: main.dart
biometric-system/infra/docker/: Dockerfile.api
biometric-system/infra/k8s/: README.md  api.yaml  configmap.yaml  dashboard.yaml  ingress.yaml  namespace.yaml  redis.yaml  secrets.example.yaml  worker.yaml
biometric-system/sdks/python/: README.md  pyproject.toml
biometric-system/sdks/python/src/biometric_sdk/: __init__.py  client.py  exceptions.py  models.py  webhooks.py
biometric-system/services/ai-core/: clustering.py  embedder.py  gpu_runtime.py  liveness_v2.py  pipeline.py
biometric-system/services/ai-core/affect/: __init__.py  emotion.py  stress.py
biometric-system/services/ai-core/kyc/: __init__.py  document_classifier.py  face_match.py  mrz.py  ocr.py  (+2 more)
biometric-system/services/api-gateway/: config.py  main.py  tasks.py
biometric-system/supabase/migrations/: 002_phase2_auth_clusters.sql  003_phase3_kyc_access.sql  004_phase5_rgpd_encryption.sql  005_phase6_saas_ai.sql
biometric-system/tests/load/: README.md  locustfile.py
(+81 files in other folders)
