[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biometric-sdk"
version = "1.0.0"
description = "SDK Python officiel pour l'API Biometric Recognition System."
authors = [{ name = "Biometric Team", email = "sdk@biometric.example" }]
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["src"]
